agrego un main con estilos

--- a/index.html
+++ b/index.html
@@ -20,5 +20,18 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <article>
+            <header>
+                <h2>Mi articulo 1</h2>
+            </header>
+            <main>
+                <img src="" alt="mi imagen">
+            </main>
+            <footer>
+                <a href="">Comprar</a>
+            </footer>
+        </article>
+    </main>
 </body>
 </html>
