--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Clase github</h1>
+    <marquee behavior="" direction="">Hola a todos desdde el pasado</marquee>
     <header>
         <div class="logo"></div>
         <nav class="barra">
