agrego el footer

--- a/index.html
+++ b/index.html
@@ -34,5 +34,9 @@
             </footer>
         </article>
     </main>
+    <footer>
+        <p>todos los derechos son reservados por copyright</p>
+        <p>desarrollado por coderhouse</p>
+    </footer>
 </body>
 </html>
