agrego las redes sociales del footer y estilos para el main y el footer

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
     <footer>
         <p>todos los derechos son reservados por copyright</p>
         <p>desarrollado por coderhouse</p>
+        <div class="redes">
+            <p>instagram</p>
+            <p>facebook</p>
+            <p>github</p>
+        </div>
     </footer>
 </body>
 </html>
